syntax = "proto3";

package email.categorization.message.v1;
option go_package = "proto/gen/messages/email_categorization;emailmsgpb";

message Email {
    string id = 1;
    string subject = 2;
    string body = 3;
    string sender = 4;
    repeated string recipents = 5;
    map<string, string> headers = 6;
}

message CategoryResult {
    string email_id = 1;
    repeated string categories = 2;
    float confidence_score = 3;
    string error = 4;
}